--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,23 +8,20 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_android"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name="com.informatika19100064.databarang.LoginActivity"
+            android:name=".RegisterActivity"
             android:label="@string/title_activity_login"></activity>
         <activity
-            android:name="com.informatika19100064.databarang.UpdateDataActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" />
         <activity
-            android:name="com.informatika19100064.databarang.InsertDataActivity"
-            android:label="@string/title_activity_login"></activity>
-        <activity
-            android:name="com.informatika19100064.databarang.MainActivity"
+            android:name=".SplashScreen"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -33,6 +30,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".UpdateDataActivity"
+            android:label="@string/title_activity_login" />
+        <activity
+            android:name=".InsertDataActivity"
+            android:label="@string/title_activity_login" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_login" />
     </application>
 
 </manifest>
